tests/NormalTests/paczka1/small_fuzzy/91794184.err
Error in line 2: R4J S164 388,2
Error in line 5: iudQY03sC S217 26,17
Error in line 6: iudQY03sC S217 61,9
Error in line 13: iudQY03sC S164 63,87
